@@ -1,3 +1,11 @@
+Wed Jan 12 10:42:35 2000  Owen Taylor  <otaylor@redhat.com>
+
+	* configure.in (MEMPROF_LIBS): Link against -lbfd and
+	-liberty statically, since the so's change with every
+	release of binutils.
+
+	* testmemprof.c: Make a bit more interesting.
+
 Tue May 23 20:06:57 2000  Owen Taylor  <otaylor@redhat.com>
 
         * process.c main.c memprof.glade: Start of support for detaching from
